@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>627</width>
-    <height>892</height>
+    <height>934</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -500,42 +500,15 @@
          </layout>
         </item>
         <item>
-         <layout class="QGridLayout" name="gridLayout_2">
+         <layout class="QGridLayout" name="gridLayout_scat">
           <property name="sizeConstraint">
            <enum>QLayout::SetMinimumSize</enum>
           </property>
-          <item row="2" column="1">
-           <widget class="QComboBox" name="comboBox_colormap"/>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_colormap">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_4">
             <property name="text">
-             <string>Colormap</string>
+             <string>Marker size</string>
             </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QComboBox" name="comboBox_marker_hue">
-            <item>
-             <property name="text">
-              <string>KDE</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Dataset</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Feature</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Disabled</string>
-             </property>
-            </item>
            </widget>
           </item>
           <item row="1" column="0">
@@ -545,43 +518,14 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="3">
-           <spacer name="horizontalSpacer_6">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>0</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_4">
+          <item row="3" column="0">
+           <widget class="QLabel" name="label_colormap">
             <property name="text">
-             <string>Marker size</string>
+             <string>Colormap</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="QDoubleSpinBox" name="doubleSpinBox_marker_size">
-            <property name="suffix">
-             <string> pt</string>
-            </property>
-            <property name="decimals">
-             <number>1</number>
-            </property>
-            <property name="minimum">
-             <double>-999999999999989.000000000000000</double>
-            </property>
-            <property name="value">
-             <double>3.000000000000000</double>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
+          <item row="1" column="3">
            <layout class="QHBoxLayout" name="horizontalLayout_5">
             <property name="spacing">
              <number>0</number>
@@ -589,6 +533,77 @@
             <property name="rightMargin">
              <number>0</number>
             </property>
+           </layout>
+          </item>
+          <item row="2" column="1">
+           <widget class="RangeControl" name="widget_range_feat" native="true">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>25</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <layout class="QHBoxLayout" name="horizontalLayout_16">
+            <item>
+             <widget class="QDoubleSpinBox" name="doubleSpinBox_marker_size">
+              <property name="suffix">
+               <string> pt</string>
+              </property>
+              <property name="decimals">
+               <number>1</number>
+              </property>
+              <property name="minimum">
+               <double>-999999999999989.000000000000000</double>
+              </property>
+              <property name="value">
+               <double>3.000000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_6">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>0</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+          <item row="1" column="1">
+           <layout class="QHBoxLayout" name="horizontalLayout_17">
+            <item>
+             <widget class="QComboBox" name="comboBox_marker_hue">
+              <item>
+               <property name="text">
+                <string>KDE</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Dataset</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Feature</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>Disabled</string>
+               </property>
+              </item>
+             </widget>
+            </item>
             <item>
              <widget class="QComboBox" name="comboBox_marker_feature">
               <item>
@@ -639,8 +654,41 @@
                  </property>
                 </widget>
                </item>
+               <item>
+                <spacer name="horizontalSpacer_8">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>0</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
               </layout>
              </widget>
+            </item>
+           </layout>
+          </item>
+          <item row="3" column="1">
+           <layout class="QHBoxLayout" name="horizontalLayout_18">
+            <item>
+             <widget class="QComboBox" name="comboBox_colormap"/>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_16">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>0</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
             </item>
            </layout>
           </item>
